# ru_stm

./: Cargo.toml  flash.sh  gdb.sh  links  openocd.cfg  openocd.gdb  openocd.sh
.cargo/: config
src/: main.rs
